# helbreath-backend

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
apps/admin-api/: Cargo.toml
apps/admin-api/src/: main.rs
apps/auth-service/: Cargo.toml
apps/auth-service/src/: main.rs
apps/chat-service/: Cargo.toml
apps/chat-service/src/: main.rs
apps/gateway/: Cargo.toml
apps/gateway/src/: main.rs
apps/jobs-runner/: Cargo.toml
apps/jobs-runner/src/: main.rs
apps/map-server/: Cargo.toml
apps/map-server/src/: main.rs
apps/world-service/: Cargo.toml
apps/world-service/src/: main.rs
crates/admin_portal/: Cargo.toml
crates/admin_portal/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/chat/: Cargo.toml
crates/chat/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/map_server/: Cargo.toml
crates/map_server/src/: lib.rs
crates/net/: Cargo.toml
crates/net/src/: lib.rs
crates/net/tests/: golden_packets.rs  replay_packets.rs
crates/net/tests/fixtures/: README.md  replay_cases.generated.json  replay_cases.json  replay_cases_legacy_v382.json  replay_cases_modern_v400.json
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/test_support/: Cargo.toml
crates/test_support/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
deploy/observability/: alerts.yml  docker-compose.observability.yml  prometheus.yml
deploy/observability/grafana/dashboards/: helbreath-overview.json
deploy/observability/grafana/provisioning/dashboards/: helbreath.yml
deploy/scripts/: backup_postgres.sh  bootstrap_ubuntu.sh  canary_check.sh  capture_replay_frames.py  evaluate_release_slo.py  generate_docs_html.py  generate_net_parity_checklist.py  generate_protocol_capture_playbook.py  generate_replay_frames_synthetic.py  install_admin_sudoers.sh  install_systemd.sh  migrate.sh  release_gate.sh  replay_capture_pipeline.sh  replay_capture_todo.py  replay_fixture_from_bin.py  replay_merge_cases.py  replay_opcode_report.py  replay_seed_modern_from_legacy.py  replay_split_cases.py  restore_latest_backup.sh  restore_postgres.sh  run_dev_stack.sh  run_observability.sh  seed_admin.sh  smoke_test.py  soak_report.py  soak_test.py  tag_release.sh  verify_baseline.sh  verify_stack_green.sh
deploy/systemd/: hb-admin-api.service  hb-auth.service  hb-chat.service  hb-gateway.service  hb-jobs.service  hb-map.service  hb-world.service
docs/: architecture.md  canary_rollback_runbook.md  data_dictionary.md  diagrams.md  migration_plan.md  net_function_inventory.md  net_legacy_parity_checklist.md  observability.md  protocol_capture_playbook.md  protocol_capture_todo.md  protocol_opcode_matrix.json  protocol_opcode_matrix.md  publication_checklist.md  release_checklist.md  slo_sla.md  soak_stability.md
migrations/: 0001_init.sql  0002_sanction_status.sql  0003_map_catalog.sql
proto/: helbreath_internal.proto
