[package]
name = "hb-auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
auth = { path = "../../crates/auth" }
config = { path = "../../crates/config" }
infrastructure = { path = "../../crates/infrastructure" }
observability = { path = "../../crates/observability" }
domain = { path = "../../crates/domain" }
