[package]
name = "hb-chat-service"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat = { path = "../../crates/chat" }
config = { path = "../../crates/config" }
observability = { path = "../../crates/observability" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
