[package]
name = "hb-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
application = { path = "../../crates/application" }
config = { path = "../../crates/config" }
net = { path = "../../crates/net" }
observability = { path = "../../crates/observability" }
