[package]
name = "net"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
application = { path = "../application" }
domain = { path = "../domain" }

[dev-dependencies]
serde_json = { workspace = true }
